best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -104,7 +104,7 @@
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Form1_Load</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
 <span class="linenr"> 2: </span><span style="color: #000000;">{</span>
-<span class="linenr"> 3: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#20107;&#20214;&#26041;&#27861;</span>
+<span class="linenr"> 3: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#20107;&#20214;&#26041;&#27861; (&#27880;&#24847;&#65292;&#36890;&#36807; += &#25805;&#20316;&#31526;&#28155;&#21152;&#20107;&#20214;)</span>
 <span class="linenr"> 4: </span>    <span style="color: #5317ac;">this</span>.Click += &#25105;&#26159;&#20107;&#20214;&#26041;&#27861;; 
 <span class="linenr"> 5: </span>
 <span class="linenr"> 6: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#36890;&#36807;&#34920;&#36798;&#24335;&#35821;&#27861;</span>
