--- a/191/index.html
+++ b/191/index.html
@@ -23,15 +23,16 @@
 <li><a href="#org6f420db">1. 笔记</a>
 <ul>
 <li><a href="#orgf0b5ab2">1.1. 2024-03-22 08:41:13</a></li>
-<li><a href="#orgc876709">1.2. 2024-03-19 09:32:31</a></li>
-<li><a href="#orgd102dc4">1.3. 2024-03-15 08:30:49</a></li>
-<li><a href="#orga76909f">1.4. 2024-03-12 09:46:16</a></li>
-<li><a href="#org55e7c0e">1.5. 2024-03-08 08:40:26</a></li>
-<li><a href="#org1e73e0a">1.6. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#orgb4d145b">1.7. 2024-01-15 (期末分数)</a></li>
-<li><a href="#org74d06bc">1.8. 2023-12-25 (任务)</a></li>
-<li><a href="#orga9f8e56">1.9. 2023-10-30 (任务)</a></li>
-<li><a href="#org857fc3a">1.10. 2023-09-11 (任务)</a></li>
+<li><a href="#org6c74def">1.2. 2024-03-15 14:52:53</a></li>
+<li><a href="#orgc876709">1.3. 2024-03-19 09:32:31</a></li>
+<li><a href="#orgd102dc4">1.4. 2024-03-15 08:30:49</a></li>
+<li><a href="#orga76909f">1.5. 2024-03-12 09:46:16</a></li>
+<li><a href="#org55e7c0e">1.6. 2024-03-08 08:40:26</a></li>
+<li><a href="#org1e73e0a">1.7. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#orgb4d145b">1.8. 2024-01-15 (期末分数)</a></li>
+<li><a href="#org74d06bc">1.9. 2023-12-25 (任务)</a></li>
+<li><a href="#orga9f8e56">1.10. 2023-10-30 (任务)</a></li>
+<li><a href="#org857fc3a">1.11. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org9279aab">2. 练习题</a>
@@ -119,21 +120,27 @@ partial, 一部分。分部类
 
 <p>
 参考代码:
-#+begin_src csharp -n
-  private void button2_Click(object sender, EventArgs e)
-  {
-      string[] words = { "你喜欢我吗", "考虑一下做我朋友吧", "xxx", "yyy" };
-      for (int i = 0; i &lt; 100; i++)
-      {
-          var form3 = new DiSanGeChuangTi();
-          //form3.Show();
-          form3.label1.Text = words[i % 4];
-          form3.ShowDialog();
-      }
-  }
-#+end_src** 2024-03-15 14:52:53
 </p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">button2_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #005a5f;">string</span><span style="color: #a8007f;">[]</span> <span style="color: #00538b;">words</span> = <span style="color: #a8007f;">{</span> <span style="color: #2544bb;">"&#20320;&#21916;&#27426;&#25105;&#21527;"</span>, <span style="color: #2544bb;">"&#32771;&#34385;&#19968;&#19979;&#20570;&#25105;&#26379;&#21451;&#21543;"</span>, <span style="color: #2544bb;">"xxx"</span>, <span style="color: #2544bb;">"yyy"</span> <span style="color: #a8007f;">}</span>;
+<span class="linenr"> 4: </span>    <span style="color: #5317ac;">for</span> <span style="color: #a8007f;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 0; i &lt; 100; i++<span style="color: #a8007f;">)</span>
+<span class="linenr"> 5: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr"> 6: </span>        <span style="color: #005a5f;">var</span> <span style="color: #00538b;">form3</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">DiSanGeChuangTi</span><span style="color: #005f88;">()</span>;
+<span class="linenr"> 7: </span>        <span style="color: #505050;">//</span><span style="color: #505050;">form3.Show();</span>
+<span class="linenr"> 8: </span>        form3.label1.Text = words<span style="color: #005f88;">[</span>i % 4<span style="color: #005f88;">]</span>;
+<span class="linenr"> 9: </span>        form3.<span style="color: #721045;">ShowDialog</span><span style="color: #005f88;">()</span>;
+<span class="linenr">10: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">11: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
 
+<div id="outline-container-org6c74def" class="outline-3">
+<h3 id="org6c74def"><span class="section-number-3">1.2.</span> 2024-03-15 14:52:53</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 Winform练习题:
 </p>
@@ -169,8 +176,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgc876709" class="outline-3">
-<h3 id="orgc876709"><span class="section-number-3">1.2.</span> 2024-03-19 09:32:31</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="orgc876709"><span class="section-number-3">1.3.</span> 2024-03-19 09:32:31</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 翻转字符串，添加循环和退出，并优化效率。
 </p>
@@ -216,8 +223,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgd102dc4" class="outline-3">
-<h3 id="orgd102dc4"><span class="section-number-3">1.3.</span> 2024-03-15 08:30:49</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orgd102dc4"><span class="section-number-3">1.4.</span> 2024-03-15 08:30:49</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 翻转字符串，参考代码：
 </p>
@@ -301,8 +308,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orga76909f" class="outline-3">
-<h3 id="orga76909f"><span class="section-number-3">1.4.</span> 2024-03-12 09:46:16</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="orga76909f"><span class="section-number-3">1.5.</span> 2024-03-12 09:46:16</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 99乘法表，实际上跟倒三角的题目是一样的:
 </p>
@@ -314,8 +321,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org55e7c0e" class="outline-3">
-<h3 id="org55e7c0e"><span class="section-number-3">1.5.</span> 2024-03-08 08:40:26</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org55e7c0e"><span class="section-number-3">1.6.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 要干啥:
 </p>
@@ -335,14 +342,14 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org1e73e0a" class="outline-3">
-<h3 id="org1e73e0a"><span class="section-number-3">1.6.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org1e73e0a"><span class="section-number-3">1.7.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="orgf5643b7">
+<figure id="org3b696cb">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -358,8 +365,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orgb4d145b" class="outline-3">
-<h3 id="orgb4d145b"><span class="section-number-3">1.7.</span> 2024-01-15 (期末分数)</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="orgb4d145b"><span class="section-number-3">1.8.</span> 2024-01-15 (期末分数)</h3>
+<div class="outline-text-3" id="text-1-8">
 <table>
 
 
@@ -611,8 +618,8 @@ Winform练习题:
 
 
 <div id="outline-container-org74d06bc" class="outline-3">
-<h3 id="org74d06bc"><span class="section-number-3">1.8.</span> 2023-12-25 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org74d06bc"><span class="section-number-3">1.9.</span> 2023-12-25 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 </p>
@@ -620,8 +627,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-orga9f8e56" class="outline-3">
-<h3 id="orga9f8e56"><span class="section-number-3">1.9.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="orga9f8e56"><span class="section-number-3">1.10.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -629,8 +636,8 @@ Winform练习题:
 </div>
 
 <div id="outline-container-org857fc3a" class="outline-3">
-<h3 id="org857fc3a"><span class="section-number-3">1.10.</span> 2023-09-11 (任务)</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="org857fc3a"><span class="section-number-3">1.11.</span> 2023-09-11 (任务)</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 创建 helloworld、编译、运行，独立完成
 </p>
