best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -100,7 +100,6 @@
 <li>从【菜单栏-窗口-重置窗口布局】的方式，恢复默认</li>
 </ol>
 
-
 <p>
 Form1.ShowDialog 是打开模态窗口的意思，即在最顶层
 </p>
@@ -349,7 +348,7 @@ Winform练习题:
 </p>
 
 
-<figure id="org9a7fa4d">
+<figure id="orgadfd0df">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
