best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -114,7 +114,7 @@ Form1.ShowDialog 是打开模态窗口的意思，即在最顶层
 </ol>
 
 <p>
-partial, 一部分。分部类
+partial, 一部分。分部类 (课本第3页)
 </p>
 
 <p>
@@ -348,7 +348,7 @@ Winform练习题:
 </p>
 
 
-<figure id="orgadfd0df">
+<figure id="org63b0fea">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
