--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-19 -->
+<!-- 2024-03-25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -20,20 +20,21 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5fee737">1. 笔记</a>
+<li><a href="#org14957c5">1. 笔记</a>
 <ul>
-<li><a href="#orgb37898d">1.1. 2024-03-18 09:55:03</a></li>
-<li><a href="#org04c0fee">1.2. 2024-03-13 11:01:46</a></li>
-<li><a href="#orgac9613f">1.3. 2024-03-11 14:52:05</a></li>
-<li><a href="#org9c3a52d">1.4. 2024-03-11 08:30:00</a></li>
-<li><a href="#org2feee7b">1.5. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org48c3f08">1.6. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org61f8ddf">1.7. 2023-12-28 (任务)</a></li>
-<li><a href="#org3179b2d">1.8. 2023-10-30 (任务)</a></li>
-<li><a href="#org6adfe91">1.9. 2023-09-07 (任务)</a></li>
+<li><a href="#orge5308c9">1.1. 2024-03-25 14:58:22</a></li>
+<li><a href="#orgf1ae66e">1.2. 2024-03-18 09:55:03</a></li>
+<li><a href="#orgb435766">1.3. 2024-03-13 11:01:46</a></li>
+<li><a href="#org8cbbc25">1.4. 2024-03-11 14:52:05</a></li>
+<li><a href="#org484b6e1">1.5. 2024-03-11 08:30:00</a></li>
+<li><a href="#org8452469">1.6. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org82189a0">1.7. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org9e9b6ae">1.8. 2023-12-28 (任务)</a></li>
+<li><a href="#org0a2cf87">1.9. 2023-10-30 (任务)</a></li>
+<li><a href="#orgf5f6210">1.10. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org132240a">2. 任务结果</a></li>
+<li><a href="#orga1a6079">2. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -43,13 +44,101 @@
 </ul>
 
 
-<section id="outline-container-org5fee737" class="outline-2">
-<h2 id="org5fee737"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org14957c5" class="outline-2">
+<h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgb37898d" class="outline-3">
-<h3 id="orgb37898d"><span class="section-number-3">1.1.</span> 2024-03-18 09:55:03</h3>
+<div id="outline-container-orge5308c9" class="outline-3">
+<h3 id="orge5308c9"><span class="section-number-3">1.1.</span> 2024-03-25 14:58:22</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+课本第 5 页，事件。
+</p>
+
+<p>
+先创建一个项目，增加一个窗体，总共两个窗体。
+</p>
+
+<p>
+在某个时刻被触发执行的逻辑:
+</p>
+<ul class="org-ul">
+<li>窗体加载到某个阶段</li>
+<li>用户执行了某个操作的时候</li>
+</ul>
+
+<p>
+示例代码:
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Form2_FormClosed</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">FormClosedEventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>   <span style="color: #505050;">// </span><span style="color: #505050;">MessageBox.Show("&#20877;&#35265;");</span>
+<span class="linenr"> 4: </span><span style="color: #000000;">}</span>
+<span class="linenr"> 5: </span>
+<span class="linenr"> 6: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Form2_FormClosing</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">FormClosingEventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr"> 7: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 8: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">MessageBox.Show("&#25105;&#35201;&#20851;&#38381;&#20102;");</span>
+<span class="linenr"> 9: </span><span style="color: #000000;">}</span>
+<span class="linenr">10: </span>
+<span class="linenr">11: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Form2_KeyDown</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">KeyEventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">12: </span><span style="color: #000000;">{</span>
+<span class="linenr">13: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Enter<span style="color: #a8007f;">)</span>
+<span class="linenr">14: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">15: </span>        <span style="color: #721045;">Close</span><span style="color: #005f88;">()</span>;
+<span class="linenr">16: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">17: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Up<span style="color: #a8007f;">)</span>
+<span class="linenr">18: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">19: </span>        label1.Location
+<span class="linenr">20: </span>            = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #005f88;">(</span>
+<span class="linenr">21: </span>                label1.Location.X,
+<span class="linenr">22: </span>                label1.Location.Y - 20
+<span class="linenr">23: </span>                <span style="color: #005f88;">)</span>;
+<span class="linenr">24: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">25: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Down<span style="color: #a8007f;">)</span>
+<span class="linenr">26: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">27: </span>        label1.Location
+<span class="linenr">28: </span>            = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #005f88;">(</span>
+<span class="linenr">29: </span>                label1.Location.X,
+<span class="linenr">30: </span>                label1.Location.Y + 20
+<span class="linenr">31: </span>                <span style="color: #005f88;">)</span>;
+<span class="linenr">32: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">33: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Left<span style="color: #a8007f;">)</span>
+<span class="linenr">34: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">35: </span>        label1.Location
+<span class="linenr">36: </span>            = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #005f88;">(</span>
+<span class="linenr">37: </span>                label1.Location.X - 20,
+<span class="linenr">38: </span>                label1.Location.Y
+<span class="linenr">39: </span>                <span style="color: #005f88;">)</span>;
+<span class="linenr">40: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">41: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Right<span style="color: #a8007f;">)</span>
+<span class="linenr">42: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">43: </span>        label1.Location
+<span class="linenr">44: </span>            = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #005f88;">(</span>
+<span class="linenr">45: </span>                label1.Location.X + 20,
+<span class="linenr">46: </span>                label1.Location.Y
+<span class="linenr">47: </span>                <span style="color: #005f88;">)</span>;
+<span class="linenr">48: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">49: </span>    <span style="color: #5317ac;">else</span>
+<span class="linenr">50: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">51: </span>        MessageBox.<span style="color: #721045;">Show</span><span style="color: #005f88;">(</span><span style="color: #2544bb;">"&#24744;&#25353;&#20102;&#19968;&#20010;&#38190;"</span><span style="color: #005f88;">)</span>;
+<span class="linenr">52: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">53: </span><span style="color: #000000;">}</span>
+<span class="linenr">54: </span>
+<span class="linenr">55: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Form2_Load</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">56: </span><span style="color: #000000;">{</span>
+<span class="linenr">57: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#31383;&#20307;&#23436;&#20840;&#20934;&#22791;&#22909;&#30340;&#26102;&#20505;&#25191;&#34892;</span>
+<span class="linenr">58: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#24120;&#29992;&#26469;&#20570;&#19968;&#20123;&#21021;&#22987;&#21270;&#24037;&#20316;</span>
+<span class="linenr">59: </span>    MessageBox.<span style="color: #721045;">Show</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"&#25105;&#20934;&#22791;&#22909;&#20102;"</span><span style="color: #a8007f;">)</span>;
+<span class="linenr">60: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orgf1ae66e" class="outline-3">
+<h3 id="orgf1ae66e"><span class="section-number-3">1.2.</span> 2024-03-18 09:55:03</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 接下来进行练习:
 </p>
@@ -75,9 +164,9 @@
 </div>
 </div>
 
-<div id="outline-container-org04c0fee" class="outline-3">
-<h3 id="org04c0fee"><span class="section-number-3">1.2.</span> 2024-03-13 11:01:46</h3>
-<div class="outline-text-3" id="text-1-2">
+<div id="outline-container-orgb435766" class="outline-3">
+<h3 id="orgb435766"><span class="section-number-3">1.3.</span> 2024-03-13 11:01:46</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 为 BMI 计算器增加身体状况的判断和显示。
 </p>
@@ -121,9 +210,9 @@
 </div>
 </div>
 
-<div id="outline-container-orgac9613f" class="outline-3">
-<h3 id="orgac9613f"><span class="section-number-3">1.3.</span> 2024-03-11 14:52:05</h3>
-<div class="outline-text-3" id="text-1-3">
+<div id="outline-container-org8cbbc25" class="outline-3">
+<h3 id="org8cbbc25"><span class="section-number-3">1.4.</span> 2024-03-11 14:52:05</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 请大家保持安静，谢谢合作。
 </p>
@@ -165,7 +254,7 @@
 </p>
 
 
-<figure id="org614f773">
+<figure id="org17d1700">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -188,9 +277,9 @@
 </div>
 </div>
 
-<div id="outline-container-org9c3a52d" class="outline-3">
-<h3 id="org9c3a52d"><span class="section-number-3">1.4.</span> 2024-03-11 08:30:00</h3>
-<div class="outline-text-3" id="text-1-4">
+<div id="outline-container-org484b6e1" class="outline-3">
+<h3 id="org484b6e1"><span class="section-number-3">1.5.</span> 2024-03-11 08:30:00</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 Winform 项目，VS 界面:
 </p>
@@ -247,9 +336,9 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org2feee7b" class="outline-3">
-<h3 id="org2feee7b"><span class="section-number-3">1.5.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-5">
+<div id="outline-container-org8452469" class="outline-3">
+<h3 id="org8452469"><span class="section-number-3">1.6.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 做一个求取 BMI 的控制台应用:
 </p>
@@ -275,9 +364,9 @@ Winform 项目，VS 界面:
 
 
 
-<div id="outline-container-org48c3f08" class="outline-3">
-<h3 id="org48c3f08"><span class="section-number-3">1.6.</span> 2024-01-15 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-6">
+<div id="outline-container-org82189a0" class="outline-3">
+<h3 id="org82189a0"><span class="section-number-3">1.7.</span> 2024-01-15 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-7">
 <table>
 
 
@@ -750,9 +839,9 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org61f8ddf" class="outline-3">
-<h3 id="org61f8ddf"><span class="section-number-3">1.7.</span> 2023-12-28 (任务)</h3>
-<div class="outline-text-3" id="text-1-7">
+<div id="outline-container-org9e9b6ae" class="outline-3">
+<h3 id="org9e9b6ae"><span class="section-number-3">1.8.</span> 2023-12-28 (任务)</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 使用控制台实现点名的功能。
 </p>
@@ -763,18 +852,18 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org3179b2d" class="outline-3">
-<h3 id="org3179b2d"><span class="section-number-3">1.8.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<div id="outline-container-org0a2cf87" class="outline-3">
+<h3 id="org0a2cf87"><span class="section-number-3">1.9.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
 </div>
 </div>
 
-<div id="outline-container-org6adfe91" class="outline-3">
-<h3 id="org6adfe91"><span class="section-number-3">1.9.</span> 2023-09-07 (任务)</h3>
-<div class="outline-text-3" id="text-1-9">
+<div id="outline-container-orgf5f6210" class="outline-3">
+<h3 id="orgf5f6210"><span class="section-number-3">1.10.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
 </p>
@@ -782,10 +871,10 @@ Winform 项目，VS 界面:
 </div>
 </section>
 
-<section id="outline-container-org132240a" class="outline-2">
-<h2 id="org132240a"><span class="section-number-2">2.</span> 任务结果</h2>
+<section id="outline-container-orga1a6079" class="outline-2">
+<h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org286715e">
+<table id="org2a188e3">
 
 
 <colgroup>
@@ -803,9 +892,9 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#org6adfe91">2023-09-07</a></th>
-<th scope="col" class="org-right"><a href="#org3179b2d">2023-10-30</a></th>
-<th scope="col" class="org-right"><a href="#org61f8ddf">2023-12-28</a></th>
+<th scope="col" class="org-right"><a href="#orgf5f6210">2023-09-07</a></th>
+<th scope="col" class="org-right"><a href="#org0a2cf87">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#org9e9b6ae">2023-12-28</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1207,7 +1296,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-19</p>
+<p class="date">Created: 2024-03-25</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
