--- a/190/index.html
+++ b/190/index.html
@@ -53,7 +53,7 @@
 <h3 id="orga282cb6"><span class="section-number-3">1.1.</span> 2024-03-27 10:33:05</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
-一个窗体中有很多图形元素，这些成为控件 (Control)。
+一个窗体中有很多图形元素，这些称为控件 (Control)。
 </p>
 
 <p>
@@ -328,7 +328,7 @@
 </p>
 
 
-<figure id="orgce13829">
+<figure id="org493f9f4">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
