best_try_and_best_chance

--- a/vvv/1-csharp.html
+++ b/vvv/1-csharp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-11 -->
+<!-- 2024-03-29 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>C♯ 语言</title>
@@ -20,21 +20,21 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgedb7c77">1. 基本规则</a></li>
+<li><a href="#org08a6c87">1. 基本规则</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-orgedb7c77" class="outline-2">
-<h2 id="orgedb7c77"><span class="section-number-2">1.</span> 基本规则</h2>
+<section id="outline-container-org08a6c87" class="outline-2">
+<h2 id="org08a6c87"><span class="section-number-2">1.</span> 基本规则</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 人有人的语言，电脑有电脑的语言。连接两者的是 <b>编译器</b> 。
 </p>
 
 
-<figure id="org13a9e2f">
+<figure id="org5099226">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
@@ -66,7 +66,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-11</p>
+<p class="date">Created: 2024-03-29</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
