--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-27 -->
+<!-- 2024-03-29 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -20,22 +20,22 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org14957c5">1. 笔记</a>
+<li><a href="#org0d27607">1. 笔记</a>
 <ul>
-<li><a href="#orga282cb6">1.1. 2024-03-27 10:33:05</a></li>
-<li><a href="#orge5308c9">1.2. 2024-03-25 14:58:22</a></li>
-<li><a href="#orgf1ae66e">1.3. 2024-03-18 09:55:03</a></li>
-<li><a href="#orgb435766">1.4. 2024-03-13 11:01:46</a></li>
-<li><a href="#org8cbbc25">1.5. 2024-03-11 14:52:05</a></li>
-<li><a href="#org484b6e1">1.6. 2024-03-11 08:30:00</a></li>
-<li><a href="#org8452469">1.7. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org82189a0">1.8. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org9e9b6ae">1.9. 2023-12-28 (任务)</a></li>
-<li><a href="#org0a2cf87">1.10. 2023-10-30 (任务)</a></li>
-<li><a href="#orgf5f6210">1.11. 2023-09-07 (任务)</a></li>
+<li><a href="#orgd2bc79b">1.1. 2024-03-27 10:33:05</a></li>
+<li><a href="#org8af7a47">1.2. 2024-03-25 14:58:22</a></li>
+<li><a href="#org3edc6ff">1.3. 2024-03-18 09:55:03</a></li>
+<li><a href="#org74e78df">1.4. 2024-03-13 11:01:46</a></li>
+<li><a href="#orgd6878c2">1.5. 2024-03-11 14:52:05</a></li>
+<li><a href="#org5055d57">1.6. 2024-03-11 08:30:00</a></li>
+<li><a href="#orga55a7ea">1.7. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org9c54ffe">1.8. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org4df153d">1.9. 2023-12-28 (任务)</a></li>
+<li><a href="#orgeb32b7e">1.10. 2023-10-30 (任务)</a></li>
+<li><a href="#org7a31677">1.11. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#orga1a6079">2. 任务结果</a></li>
+<li><a href="#org86b49eb">2. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -45,12 +45,12 @@
 </ul>
 
 
-<section id="outline-container-org14957c5" class="outline-2">
-<h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org0d27607" class="outline-2">
+<h2 id="org0d27607"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orga282cb6" class="outline-3">
-<h3 id="orga282cb6"><span class="section-number-3">1.1.</span> 2024-03-27 10:33:05</h3>
+<div id="outline-container-orgd2bc79b" class="outline-3">
+<h3 id="orgd2bc79b"><span class="section-number-3">1.1.</span> 2024-03-27 10:33:05</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 一个窗体中有很多图形元素，这些称为控件 (Control)。
@@ -122,8 +122,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge5308c9" class="outline-3">
-<h3 id="orge5308c9"><span class="section-number-3">1.2.</span> 2024-03-25 14:58:22</h3>
+<div id="outline-container-org8af7a47" class="outline-3">
+<h3 id="org8af7a47"><span class="section-number-3">1.2.</span> 2024-03-25 14:58:22</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 课本第 5 页，事件。
@@ -210,8 +210,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf1ae66e" class="outline-3">
-<h3 id="orgf1ae66e"><span class="section-number-3">1.3.</span> 2024-03-18 09:55:03</h3>
+<div id="outline-container-org3edc6ff" class="outline-3">
+<h3 id="org3edc6ff"><span class="section-number-3">1.3.</span> 2024-03-18 09:55:03</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 接下来进行练习:
@@ -238,8 +238,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb435766" class="outline-3">
-<h3 id="orgb435766"><span class="section-number-3">1.4.</span> 2024-03-13 11:01:46</h3>
+<div id="outline-container-org74e78df" class="outline-3">
+<h3 id="org74e78df"><span class="section-number-3">1.4.</span> 2024-03-13 11:01:46</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 为 BMI 计算器增加身体状况的判断和显示。
@@ -284,8 +284,8 @@
 </div>
 </div>
 
-<div id="outline-container-org8cbbc25" class="outline-3">
-<h3 id="org8cbbc25"><span class="section-number-3">1.5.</span> 2024-03-11 14:52:05</h3>
+<div id="outline-container-orgd6878c2" class="outline-3">
+<h3 id="orgd6878c2"><span class="section-number-3">1.5.</span> 2024-03-11 14:52:05</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 请大家保持安静，谢谢合作。
@@ -328,7 +328,7 @@
 </p>
 
 
-<figure id="orgf07ecd8">
+<figure id="org7186480">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -351,8 +351,8 @@
 </div>
 </div>
 
-<div id="outline-container-org484b6e1" class="outline-3">
-<h3 id="org484b6e1"><span class="section-number-3">1.6.</span> 2024-03-11 08:30:00</h3>
+<div id="outline-container-org5055d57" class="outline-3">
+<h3 id="org5055d57"><span class="section-number-3">1.6.</span> 2024-03-11 08:30:00</h3>
 <div class="outline-text-3" id="text-1-6">
 <p>
 Winform 项目，VS 界面:
@@ -410,8 +410,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org8452469" class="outline-3">
-<h3 id="org8452469"><span class="section-number-3">1.7.</span> 2024-01-15 (寒假作业)</h3>
+<div id="outline-container-orga55a7ea" class="outline-3">
+<h3 id="orga55a7ea"><span class="section-number-3">1.7.</span> 2024-01-15 (寒假作业)</h3>
 <div class="outline-text-3" id="text-1-7">
 <p>
 做一个求取 BMI 的控制台应用:
@@ -438,8 +438,8 @@ Winform 项目，VS 界面:
 
 
 
-<div id="outline-container-org82189a0" class="outline-3">
-<h3 id="org82189a0"><span class="section-number-3">1.8.</span> 2024-01-15 (期末成绩)</h3>
+<div id="outline-container-org9c54ffe" class="outline-3">
+<h3 id="org9c54ffe"><span class="section-number-3">1.8.</span> 2024-01-15 (期末成绩)</h3>
 <div class="outline-text-3" id="text-1-8">
 <table>
 
@@ -913,8 +913,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org9e9b6ae" class="outline-3">
-<h3 id="org9e9b6ae"><span class="section-number-3">1.9.</span> 2023-12-28 (任务)</h3>
+<div id="outline-container-org4df153d" class="outline-3">
+<h3 id="org4df153d"><span class="section-number-3">1.9.</span> 2023-12-28 (任务)</h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 使用控制台实现点名的功能。
@@ -926,8 +926,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org0a2cf87" class="outline-3">
-<h3 id="org0a2cf87"><span class="section-number-3">1.10.</span> 2023-10-30 (任务)</h3>
+<div id="outline-container-orgeb32b7e" class="outline-3">
+<h3 id="orgeb32b7e"><span class="section-number-3">1.10.</span> 2023-10-30 (任务)</h3>
 <div class="outline-text-3" id="text-1-10">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
@@ -935,8 +935,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-orgf5f6210" class="outline-3">
-<h3 id="orgf5f6210"><span class="section-number-3">1.11.</span> 2023-09-07 (任务)</h3>
+<div id="outline-container-org7a31677" class="outline-3">
+<h3 id="org7a31677"><span class="section-number-3">1.11.</span> 2023-09-07 (任务)</h3>
 <div class="outline-text-3" id="text-1-11">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
@@ -945,10 +945,10 @@ Winform 项目，VS 界面:
 </div>
 </section>
 
-<section id="outline-container-orga1a6079" class="outline-2">
-<h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
+<section id="outline-container-org86b49eb" class="outline-2">
+<h2 id="org86b49eb"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org2a188e3">
+<table id="orgec75523">
 
 
 <colgroup>
@@ -966,9 +966,9 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#orgf5f6210">2023-09-07</a></th>
-<th scope="col" class="org-right"><a href="#org0a2cf87">2023-10-30</a></th>
-<th scope="col" class="org-right"><a href="#org9e9b6ae">2023-12-28</a></th>
+<th scope="col" class="org-right"><a href="#org7a31677">2023-09-07</a></th>
+<th scope="col" class="org-right"><a href="#orgeb32b7e">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#org4df153d">2023-12-28</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1370,7 +1370,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-27</p>
+<p class="date">Created: 2024-03-29</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
