--- a/vvv/9-windows.html
+++ b/vvv/9-windows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-11 -->
+<!-- 2024-03-29 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Windows</title>
@@ -20,15 +20,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga83a479">1. 快捷键</a></li>
-<li><a href="#org7efa8a4">2. 命令提示符</a></li>
+<li><a href="#org9630e8c">1. 快捷键</a></li>
+<li><a href="#orge75d59d">2. 命令提示符</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-orga83a479" class="outline-2">
-<h2 id="orga83a479"><span class="section-number-2">1.</span> 快捷键</h2>
+<section id="outline-container-org9630e8c" class="outline-2">
+<h2 id="org9630e8c"><span class="section-number-2">1.</span> 快捷键</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 全局：
@@ -49,8 +49,8 @@
 </div>
 </section>
 
-<section id="outline-container-org7efa8a4" class="outline-2">
-<h2 id="org7efa8a4"><span class="section-number-2">2.</span> 命令提示符</h2>
+<section id="outline-container-orge75d59d" class="outline-2">
+<h2 id="orge75d59d"><span class="section-number-2">2.</span> 命令提示符</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 打开方式:
@@ -108,7 +108,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-11</p>
+<p class="date">Created: 2024-03-29</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
