best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -64,14 +64,12 @@
 <span class="linenr"> 5: </span>    timer1.Interval = 100;
 <span class="linenr"> 6: </span>    timer1.Tick += GengxinShijian;
 <span class="linenr"> 7: </span>    timer1.Enabled = <span style="color: #0000c0;">true</span>;
-<span class="linenr"> 8: </span>
+<span class="linenr"> 8: </span><span style="color: #000000;">}</span>
 <span class="linenr"> 9: </span>
-<span class="linenr">10: </span><span style="color: #000000;">}</span>
-<span class="linenr">11: </span>
-<span class="linenr">12: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">GengxinShijian</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
-<span class="linenr">13: </span><span style="color: #000000;">{</span>
-<span class="linenr">14: </span>    label2.Text = DateTime.Now.<span style="color: #721045;">ToString</span><span style="color: #a8007f;">()</span>;
-<span class="linenr">15: </span><span style="color: #000000;">}</span>
+<span class="linenr">10: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">GengxinShijian</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">11: </span><span style="color: #000000;">{</span>
+<span class="linenr">12: </span>    label2.Text = DateTime.Now.<span style="color: #721045;">ToString</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">13: </span><span style="color: #000000;">}</span>
 </pre>
 </div>
 </div>
@@ -356,7 +354,7 @@
 </p>
 
 
-<figure id="org3827951">
+<figure id="orgde83b43">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
