best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-02 -->
+<!-- 2024-04-03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -22,18 +22,19 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#org25d14b5">1.1. 2024-04-02 10:54:48</a></li>
-<li><a href="#org30b5844">1.2. 2024-03-27 08:28:29</a></li>
-<li><a href="#org2e51549">1.3. 2024-03-26 10:36:40</a></li>
-<li><a href="#org7ebc4f2">1.4. 2024-03-20 14:58:37</a></li>
-<li><a href="#org30e98f4">1.5. 2024-03-19 10:49:19</a></li>
-<li><a href="#org2309290">1.6. 2024-03-13 08:31:23</a></li>
-<li><a href="#orgd40edb2">1.7. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.8. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.9. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.10. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.11. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.12. 2023-09-06 (任务)</a></li>
+<li><a href="#org14d735d">1.1. 2024-04-03 09:26:26</a></li>
+<li><a href="#org25d14b5">1.2. 2024-04-02 10:54:48</a></li>
+<li><a href="#org30b5844">1.3. 2024-03-27 08:28:29</a></li>
+<li><a href="#org2e51549">1.4. 2024-03-26 10:36:40</a></li>
+<li><a href="#org7ebc4f2">1.5. 2024-03-20 14:58:37</a></li>
+<li><a href="#org30e98f4">1.6. 2024-03-19 10:49:19</a></li>
+<li><a href="#org2309290">1.7. 2024-03-13 08:31:23</a></li>
+<li><a href="#orgd40edb2">1.8. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.9. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.10. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.11. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.12. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.13. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org7ac10f0">2. 练习题</a>
@@ -60,9 +61,63 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org25d14b5" class="outline-3">
-<h3 id="org25d14b5"><span class="section-number-3">1.1.</span> 2024-04-02 10:54:48</h3>
+<div id="outline-container-org14d735d" class="outline-3">
+<h3 id="org14d735d"><span class="section-number-3">1.1.</span> 2024-04-03 09:26:26</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+关于跳动的心，需要掌握:
+</p>
+<ul class="org-ul">
+<li>如何通过 FormBorderStyle 设置无标题窗体</li>
+<li>如何通过 BackgroundImage 和 TransparentKey 设置不规则窗体</li>
+<li>如何通过 timer1 与 Location/Size 的配合，实现奇妙的互动行为</li>
+</ul>
+
+<p>
+本节课:
+</p>
+<ul class="org-ul">
+<li>练习“跳动的心”</li>
+<li>完成第一章课后题</li>
+</ul>
+
+<p>
+Winform练习题:
+</p>
+<ol class="org-ol">
+<li>创建一个简单的登录窗体，包含用户名和密码的文本框，以及登录按钮。
+当用户点击登录按钮时，检查用户名和密码是否正确，并显示相应的提示信息。</li>
+<li>创建一个计算器窗体，包含数字按钮和运算符按钮。当用户点击数字按钮时，在文本框中显示相应的数字。
+当用户点击运算符按钮时，根据当前显示的数字和运算符进行计算，并在文本框中显示结果。</li>
+<li>创建一个列表窗体，用于显示学生的姓名和成绩。窗体中包含一个添加按钮和一个显示按钮。
+当用户点击添加按钮时，弹出一个对话框，要求输入学生的姓名和成绩，并将其添加到列表中。当用户点击显示按钮时，在另一个窗体中显示所有学生的姓名和成绩。</li>
+<li>创建一个简单的音乐播放器窗体，包含播放、暂停和停止按钮，以及显示当前播放状态的标签。
+当用户点击播放按钮时，播放音乐；点击暂停按钮时，暂停音乐；点击停止按钮时，停止音乐。</li>
+<li>创建一个简单的图片浏览器窗体，包含向前、向后按钮和显示当前图片的图片框。
+当用户点击向前按钮时，显示上一张图片；点击向后按钮时，显示下一张图片。</li>
+<li>创建一个简单的文本编辑器窗体，可以打开和保存文本文件。窗体包含一个文本框用于输入和编辑文本内容，以及打开和保存按钮。
+当用户点击打开按钮时，弹出一个对话框选择要打开的文本文件，并将其内容显示在文本框中。当用户点击保存按钮时，将文本框中的内容保存到指定的文件中。</li>
+<li>创建一个简单的倒计时器窗体，可以设置倒计时时间，并显示倒计时的剩余时间。
+窗体包含一个输入框用于设置倒计时时间，一个开始按钮和一个显示剩余时间的标签。
+当用户点击开始按钮时，开始倒计时，并在标签中显示剩余时间，直到倒计时结束。</li>
+<li>创建一个简单的日历窗体，显示当前日期和时间，并允许用户选择日期。
+窗体包含一个显示当前日期和时间的标签，以及一个选择日期的日历控件。</li>
+<li>创建一个简单的笔记本应用程序窗体，可以创建、打开和保存笔记。
+窗体包含一个文本框用于输入和编辑笔记内容，以及新建、打开和保存按钮。
+当用户点击新建按钮时，清空文本框内容；当用户点击打开按钮时，弹出一个对话框选择要打开的笔记文件，并将其内容显示在文本框中；
+当用户点击保存按钮时，将文本框中的内容保存到指定的文件中。</li>
+<li>创建一个简单的待办事项列表窗体，可以添加、删除和完成待办事项。
+窗体包含一个文本框用于输入待办事项，一个添加按钮和一个待办事项列表框。
+当用户点击添加按钮时，将输入的待办事项添加到列表框中；
+当用户选中列表框中的待办事项并点击删除按钮时，删除选中的待办事项；
+当用户选中列表框中的待办事项并点击完成按钮时，将选中的待办事项标记为已完成。</li>
+</ol>
+</div>
+</div>
+
+<div id="outline-container-org25d14b5" class="outline-3">
+<h3 id="org25d14b5"><span class="section-number-3">1.2.</span> 2024-04-02 10:54:48</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 Tips:
 </p>
@@ -78,8 +133,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org30b5844" class="outline-3">
-<h3 id="org30b5844"><span class="section-number-3">1.2.</span> 2024-03-27 08:28:29</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org30b5844"><span class="section-number-3">1.3.</span> 2024-03-27 08:28:29</h3>
+<div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>练习上次的内容，搞会</li>
 <li>按照课本第10页，完成登录项目的编写</li>
@@ -89,8 +144,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org2e51549" class="outline-3">
-<h3 id="org2e51549"><span class="section-number-3">1.3.</span> 2024-03-26 10:36:40</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org2e51549"><span class="section-number-3">1.4.</span> 2024-03-26 10:36:40</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 组件、控件、Control，在 C# 中，实际就是一个类的实例。
 </p>
@@ -146,8 +201,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org7ebc4f2" class="outline-3">
-<h3 id="org7ebc4f2"><span class="section-number-3">1.4.</span> 2024-03-20 14:58:37</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org7ebc4f2"><span class="section-number-3">1.5.</span> 2024-03-20 14:58:37</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 一个小挑战。
 </p>
@@ -165,8 +220,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org30e98f4" class="outline-3">
-<h3 id="org30e98f4"><span class="section-number-3">1.5.</span> 2024-03-19 10:49:19</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org30e98f4"><span class="section-number-3">1.6.</span> 2024-03-19 10:49:19</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 实际上，一个窗体就是一个 C# 的类型。对应三个文件：
 </p>
@@ -258,8 +313,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org2309290" class="outline-3">
-<h3 id="org2309290"><span class="section-number-3">1.6.</span> 2024-03-13 08:31:23</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org2309290"><span class="section-number-3">1.7.</span> 2024-03-13 08:31:23</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 上课了
 </p>
@@ -373,8 +428,8 @@ GUI 程序 (Graphic User Interface):
 </div>
 
 <div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.7.</span> 2024-03-12 11:07:40</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="orgd40edb2"><span class="section-number-3">1.8.</span> 2024-03-12 11:07:40</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
 </p>
@@ -390,8 +445,8 @@ string abc = Console.ReadLine();
 </div>
 
 <div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.8.</span> 2024-01-16 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.9.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -403,8 +458,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.9.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="orgdd2b753"><span class="section-number-3">1.10.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-10">
 <table>
 
 
@@ -824,8 +879,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.10.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="orgad105e2"><span class="section-number-3">1.11.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -833,8 +888,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.11.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-11">
+<h3 id="org64a4c8c"><span class="section-number-3">1.12.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-12">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -842,8 +897,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.12.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-12">
+<h3 id="org16fdc68"><span class="section-number-3">1.13.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-13">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
@@ -1485,7 +1540,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-02</p>
+<p class="date">Created: 2024-04-03</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
