best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -70,7 +70,8 @@
 <ul class="org-ul">
 <li>如何通过 FormBorderStyle 设置无标题窗体</li>
 <li>如何通过 BackgroundImage 和 TransparentKey 设置不规则窗体</li>
-<li>如何通过 timer1 与 Location/Size 的配合，实现奇妙的互动行为</li>
+<li>如何通过 Timer 与 Location/Size 等的配合，实现奇妙的互动行为</li>
+<li>如何为窗体、控件绑定事件</li>
 </ul>
 
 <p>
